@@ -32,12 +32,15 @@ configure(allprojects) { project ->
 	}
 
 	tasks.withType(JavaCompile) {
+		
+		sourceCompatibility = SOURCE_COMPILER_LEVEL
+		targetCompatibility = TARGET_COMPILER_LEVEL
 		options.encoding = 'UTF-8'
 	}
 
 	tasks.withType(Javadoc) {
-		sourceCompatibility = SOURCE_COMPILER_LEVEL
-		targetCompatibility = TARGET_COMPILER_LEVEL
+		sourceCompatibility = JAVADOC_SOURCE_LEVEL
+		targetCompatibility = JAVADOC_COMPILER_LEVEL
 		options.encoding = 'UTF-8'
 	}
 
@@ -64,7 +67,7 @@ configure(allprojects) { project ->
 		mavenLocal()
 		
 	}
-	if(project.getProperty('skipTest'))
+	if(project.getProperty('skipTest').equals("true"))
 	{
 		compileTestJava.enabled=false
 		processTestResources.enabled=false
@@ -73,31 +76,7 @@ configure(allprojects) { project ->
 	}
 }
 
-configure(subprojects.findAll {it.name.equals('bboss-websocket')}) {
-	
-    apply plugin: 'war'
-    /**apply plugin: 'jetty'  
-    jettyRun {
-	  reload ="automatic"
-	  scanIntervalSeconds = 1
-	  httpPort=80
-	  contextPath='/bboss-websocket'
-	}*/
-    /** apply plugin: 'org.akhikhl.gretty'
-    
-     gretty {
-	    httpPort = 80
-	   
-	    contextPath = '/bboss-websocket'
-	    jvmArgs = ['-Xmx1024M', '-XX:PermSize=128M', '-XX:MaxPermSize=256M']
-	  //  servletContainer = 'jetty7'
-	  
-	  }*/
-    /**evaluationDependsOn(':bboss-mvc')
-	evaluationDependsOn(':bboss-util')
-	evaluationDependsOn(':bboss-core')
-	evaluationDependsOn(':bboss-soa')*/
-}
+ 
 configure(subprojects - [project(":bboss-util"),project(":bboss-taglib"),project(":bboss-websocket")]) { subproject ->
 	task sourcesJar(type: Jar) {
 		classifier = "sources"	
